@startuml
!theme minty
interface Human {
    + get_name(): &str
    + get_age(): i8
}
class Student {
    + Student(name:&str, age:i8)
		+ get_grade(lecture:&Lecture)
}
Human <|-- Student
class Teacher {
    + Teacher(name:&str, age:i8)
		+ check_attendance(lecture:&Lecture, student_name:&str, date:&str, check:bool)
		+ grade(lecture:&Lecture, student_name:&str, grade:i8)
}
Human <|-- Teacher
class Lecture {
    + Lecture(name:string, address:string, time_star:string, time_stop:string, teacher:Teacher)
    + get_name : &str 
    + get_address : &str
    + get_time_start : &str
    + get_time_stop : &str
    + get_homeroom_teacher : &Teacher
    + get_students : &Vec<Student>
		+ get_attendance_list: &mut HashMap<String, HashMap<String, bool>>
		+ get_grades: &mut HashMap<String, i8>
}
Lecture --> Teacher
Lecture --> Student
@enduml
